I should also deal with AtomicBoolean. I still vaguely imagine an algorithm with AtomicBoolean